# Magma-Engine-5

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Example/: CMakeLists.txt  Main.cpp
src/Magma/: CMakeLists.txt
src/Magma/Core/: CMakeLists.txt  Core.hpp  Serializable.cpp  Serializable.hpp
src/Magma/Debug/: CMakeLists.txt  Console.cpp  Console.hpp
src/Magma/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/Magma/Graphics/: CMakeLists.txt  Context.hpp  GLContext.cpp  GLContext.hpp  Renderer.cpp  Renderer.hpp  TerminalRenderer.cpp  TerminalRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Magma/Input/: CMakeLists.txt  Event.hpp  Keyboard.hpp  Mouse.hpp  Window.cpp  Window.hpp
src/Magma/Resources/: CMakeLists.txt  FileSystem.hpp  Font.hpp  Manager.hpp
